[package]
name = "bevy_prototype_css"
authors = ["sharky-david"]
version = "0.1.0"
edition = "2021"
categories = ["game-engines", "gui", "ui"]
description = "A plugin to add CSS support to the Bevy game engine"
exclude = ["assets/**/*"]
keywords = ["bevy", "ui", "gui"]
readme = "Readme.md"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.7.0"
anyhow = "1.0.4"
cssparser = "0.28.1"
selectors = "0.23.0"
smallvec = "1.8.0"

[dev-dependencies]
bevy = "0.7.0"

[[example]]
name = "bevy_ui_inline"
path = "examples/bevy_ui_inline.rs"

[[example]]
name = "bevy_ui_stylesheet"
path = "examples/bevy_ui_stylesheet.rs"